keiciu body ploti, kad visas puslapis butu atvazduojamas normaliai ant telefo

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html, body {
+    width: 100%;
+}
+
 /* ------------------Bendri stiliai---------------------- */
 div {
     border: 1px dashed grey;
