Slowly readding some other sections to test out the overflow solution on the phone

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -170,9 +170,13 @@ div.theory-text img {
 
 /*------------------------------------------------- SPOILER STILIAI------------------------------------- */
 
+pre {
+    overflow: scroll;
+}
+
 /* Bendrai pre > code */
 pre > code {
-    white-space: pre-wrap;
+    white-space: pre-wrap!important;            /* Rewriting PRISM styles, since the default is pre */
 }
 
 /* Spoiler paprastas */
